<resources>
    <string name="app_name">Apni_svari</string>
    <string name="default_web_client_id">YOUR_WEB_CLIENT_ID.apps.googleusercontent.com</string>
    <string name="home_tab">Home</string>
    <string name="search_tab">Search</string>
    <string name="favourite_tab">History</string>
    <string name="profile_tab">Profile</string>
    <string name="sell_tab">Sell</string>
    <string name="home_fragment_text">This is HomeFragment</string>
    <string name="search_fragment_text">This is SearchFragment</string>
    <string name="favourite_fragment_text">This is FavouriteFragment</string>
    <string name="profile_fragment_text">This is ProfileFragment</string>
    <string name="sell_fragment_text">This is SellFragment</string>
    <string name="hello_user">Hello, User</string>
    <string name="hello_user_with_name">Hello, %1$s</string>
    <string name="profile_username_label">Username</string>
    <string name="profile_email_label">Email</string>
    <string name="profile_pick_image">Change Profile Picture</string>
    <string name="profile_remove_image">Remove Profile Picture</string>
    <string name="profile_logout">Logout</string>
    <string name="profile_picture_content_description">Profile Picture</string>
    <string name="profile_username_value">Username: %1$s</string>
    <string name="profile_email_value">Email: %1$s</string>
    <string name="profile_empty_value">-</string>
    <string name="drawer_open">Open Navigation Drawer</string>
    <string name="drawer_close">Close Navigation Drawer</string>
    <string name="seller_open_drawer">Open Drawer</string>
    <string name="seller_close_drawer">Close Drawer</string>
    <string name="seller_home_title">Seller Home</string>
    <string name="seller_add_product">Add Product</string>
    <string name="seller_delete_product">Delete Product</string>
    <string name="seller_select_picture">Select Picture</string>
    <string name="seller_car_name_hint">Car Name</string>
    <string name="seller_car_model_hint">Model</string>
    <string name="seller_car_price_hint">Price</string>
    <string name="seller_product_detail">Product Detail</string>
    <string name="seller_back">Back</string>
    <string name="seller_model_value">Model: %1$s</string>
    <string name="seller_price_value">Price: %1$s</string>
    <string name="seller_offered_price_value">Offered Price: %1$s</string>
    <string name="seller_no_offer">No offer yet</string>
    <string name="seller_add_product_dialog_title">Add Car Product</string>
    <string name="seller_save">Save</string>
    <string name="seller_cancel">Cancel</string>
    <string name="seller_product_added">Product added</string>
    <string name="seller_product_deleted">Product deleted</string>
    <string name="seller_fill_all_fields">Please fill all fields and select image</string>
</resources>