<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/home_tab" />
    <item
        android:id="@+id/nav_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search_tab" />
    <item
        android:id="@+id/nav_favourite"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/favourite_tab" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/profile_tab" />
    <item
        android:id="@+id/nav_sell"
        android:icon="@android:drawable/ic_input_add"
        android:title="@string/sell_tab" />
</menu>
